time color change with setTimeout

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <span id="date" class="heure heure--modifier"></span>
 
             <span
+              id="currentTime"
               class="currentTime currentTime__element currentTime__element--modifier"
             ></span>
 
