time header hour now

--- a/index.html
+++ b/index.html
@@ -79,12 +79,11 @@
       <div class="container-header__background">
         <div class="container-header__info">
           <div class="container-header__nav">
-            <span id="date" class="heure heure--modifier"></span>
-
-            <span
+            <!-- <span id="date" class="heure heure--modifier"></span> -->
+            <div
               id="currentTime"
               class="currentTime currentTime__element currentTime__element--modifier"
-            ></span>
+            ></div>
 
             <div id="home" class="top top__logo">
               <span class="top__logo--modifier">
