--- a/index.html
+++ b/index.html
@@ -21,38 +21,38 @@
       <nav id="nav" class="nav">
         <ul>
           <li class="li">
-            <a href="/about.html" class="nav__link nav__link--active"
+            <a href="/about.html" class="link link--active"
               ><i class="fas fa-home icon"></i>Accueil</a
             >
           </li>
           <li class="li">
-            <a href="#profil" class="nav__link"
+            <a href="#profil" class="link"
               ><i class="fas fa-user icon"></i>Profil</a
             >
           </li>
           <li class="li">
-            <a href="#portfolio" class="nav__link"
+            <a href="#portfolio" class="link"
               ><i class="fas fa-briefcase icon"></i>Portfolio</a
             >
           </li>
           <li class="li">
-            <a href="#CV" class="nav__link"
+            <a href="#CV" class="link"
               ><i class="fas fa-book-open icon"></i>CV</a
             >
           </li>
           <li class="li">
-            <a href="#Contact" class="nav__link"
+            <a href="#Contact" class="link"
               ><i class="fas fa-phone icon"></i>Contact</a
             >
           </li>
           <li class="li">
-            <a href="#Activité" class="nav__link"
+            <a href="#Activité" class="link"
               ><i class="fas fa-tasks icon"></i>Activité Récente</a
             >
           </li>
           <!-- Langue, Anglais, Francais, Indonésien -->
           <li class="li">
-            <a href="#langue" class="nav__link"
+            <a href="#langue" class="link"
               ><img
                 src="./public/image/Drapeau/France.png"
                 alt="France"
@@ -60,7 +60,7 @@
             >
           </li>
           <span class="darkmode">
-            <span id="darkmode-Text" class="dark__police"
+            <span id="darkmode-Text"
               ><i class="far fa-lightbulb claire"></i>Mode claire</span
             >
             <input
@@ -98,57 +98,55 @@
               <nav id="nav-desktop" class="nav-desktop">
                 <ul>
                   <li class="li">
-                    <a href="/about.html" class="nav__link nav__link--active"
+                    <a href="/about.html" class="link link--active"
                       ><i class="fas fa-home icon"></i>Accueil</a
                     >
                   </li>
                   <li class="li">
-                    <a href="#profil" class="nav__link"
+                    <a href="#profil" class="link"
                       ><i class="fas fa-user icon"></i>Profil</a
                     >
                   </li>
                   <li class="li">
-                    <a href="#portfolio" class="nav__link"
+                    <a href="#portfolio" class="link"
                       ><i class="fas fa-briefcase icon"></i>Portfolio</a
                     >
                   </li>
                   <li class="li">
-                    <a href="#CV" class="nav__link"
+                    <a href="#CV" class="link"
                       ><i class="fas fa-book-open icon"></i>CV</a
                     >
                   </li>
                   <li class="li">
-                    <a href="#Contact" class="nav__link"
+                    <a href="#Contact" class="link"
                       ><i class="fas fa-phone icon"></i>Contact</a
                     >
                   </li>
                   <li class="li">
-                    <a href="#Activité" class="nav__link"
+                    <a href="#Activité" class="link"
                       ><i class="fas fa-tasks icon"></i>Activité Récente</a
                     >
                   </li>
                   <!-- Langue, Anglais, Francais, Indonésien -->
-                  <a href="#langue" class="a">
-                    <li>
-                      <img
-                        class="image"
+                  <li class="li">
+                    <a href="#langue" class="link"
+                      ><img
                         src="./public/image/Drapeau/France.png"
                         alt="France"
-                      />
-                      Version Française
-                    </li>
-                  </a>
+                      />Version Française</a
+                    >
+                  </li>
                   <span class="darkmode">
                     <span id="darkmode-Text"
                       ><i class="far fa-lightbulb claire"></i>Mode claire</span
                     >
                     <input
                       type="checkbox"
-                      name="darkmode"
+                      name="darkmode-desktop"
                       class="toggle"
-                      id="darkmode"
+                      id="darkmode-desktop"
                     />
-                    <label for="darkmode" class="toggleBtn"></label>
+                    <label for="darkmode-desktop" class="toggleBtn"></label>
                   </span>
                 </ul>
               </nav>
