darkmode pc and mobile works in separate js

--- a/index.html
+++ b/index.html
@@ -137,16 +137,16 @@
                     >
                   </li>
                   <span class="darkmode">
-                    <span id="darkmode-Text"
+                    <span id="darkmode-Text-pc"
                       ><i class="far fa-lightbulb claire"></i>Mode claire</span
                     >
                     <input
                       type="checkbox"
-                      name="darkmode-desktop"
+                      name="darkmode-pc"
                       class="toggle"
-                      id="darkmode-desktop"
+                      id="darkmode-pc"
                     />
-                    <label for="darkmode-desktop" class="toggleBtn"></label>
+                    <label for="darkmode-pc" class="toggleBtn"></label>
                   </span>
                 </ul>
               </nav>
@@ -351,6 +351,7 @@
     <script defer src="./public/JS/font-awesome-JS/all.js"></script>
     <script defer src="./public/JS/font-awesome-JS/all.min.js"></script>
     <script defer src="./public/JS/darkmode.js"></script>
+    <script defer src="./public/JS/darkmodePc.js"></script>
     <script defer src="./public/JS/tooltip.js"></script>
     <script defer src="./public/JS/date.js"></script>
     <script defer src="./public/JS/weather.js"></script>
