toggle and darkmode works on localstorage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/public/css/style.css.map" />
     <title>David Bouhaben ePortfolio</title>
   </head>
-  <body class="" id="bodyId">
+  <body class="bodyLight" id="bodyId">
     <div class="loading--circle loading--full-hight">
       <div class="loading--box loading--full-hight"></div>
     </div>
@@ -220,41 +220,33 @@
                   <div class="container-overlay">
                     <i class="fas fa-laptop-code fa-2x"></i>
                     <span>Front End</span>
-                    <div class="overlay">
-                      <span class="overlay__text overlay__text--modifier"
-                        >Front End</span
-                      >
-                    </div>
+                    <span class="overlay overlay__text overlay__text--modifier"
+                      ><p>Front End</p>
+                    </span>
                   </div>
 
                   <div class="container-overlay">
                     <i class="fas fa-server fa-2x"></i>
                     <span>Back End</span>
-                    <div class="overlay">
-                      <span class="overlay__text overlay__text--modifier"
-                        >Back End</span
-                      >
-                    </div>
+                    <span class="overlay overlay__text overlay__text--modifier"
+                      ><p>Back End</p></span
+                    >
                   </div>
 
                   <div class="container-overlay">
                     <i class="fas fa-mobile-alt fa-2x"></i>
                     <span>Web Mobile</span>
-                    <div class="overlay">
-                      <span class="overlay__text overlay__text--modifier"
-                        >Web Mobile</span
-                      >
-                    </div>
+                    <span class="overlay overlay__text overlay__text--modifier"
+                      ><p>Web Mobile</p></span
+                    >
                   </div>
 
                   <div class="container-overlay">
                     <i class="fas fa-brush fa-2x"></i>
                     <span>Web Design</span>
-                    <div class="overlay">
-                      <span class="overlay__text overlay__text--modifier"
-                        >Web Design</span
-                      >
-                    </div>
+                    <span class="overlay overlay__text overlay__text--modifier"
+                      ><p>Web Design</p></span
+                    >
                   </div>
                 </div>
               </div>
@@ -355,5 +347,6 @@
     <script defer src="./public/JS/tooltip.js"></script>
     <script defer src="./public/JS/date.js"></script>
     <script defer src="./public/JS/weather.js"></script>
+    <script defer src="./public/JS/toggle.js"></script>
   </body>
 </html>
