header almost done

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                 <p class="bio__element bio__element--modifier">
                   Je suis à la recherche d'un contrat en alternance qui me
                   permettrait d’acquérir de nouvelles compétences dans le
-                  développement web (côté Front-End, Back-end ou FullStack).
-                  Vous pouvez regarder ma
+                  développement web (côté Front-End, Back-end ou FullStack) à
+                  partir de Janvier 2022. <br/> Vous pouvez regarder ma
                   <a href="https://paper.li/e-1598349115"
                     >curation de contenu ici</a
                   >. Voulez-vous savoir plus sur moi ? Vous pouvez consulter
@@ -209,12 +209,32 @@
                   <a href="https://github.com/Darkheadbanger">Github</a> et
                   vouspouvez télécharger mon
                   <a
-                    href="/public/CV/CV_Bouhaben_David_FrontEndDevelopper.pdf"
+                    href="/public/CV/CV_Bouhaben_David.pdf"
                     target="_blank"
                     rel="noopener"
                     >CV ici</a
                   >
                 </p>
+                <!-- <div class="container-portfolio">
+                  <a href="#">
+                    <button
+                      class="btn btn__element btn__element--modifier icon-info"
+                    >
+                      <i class="fas fa-briefcase icon-portfolio"></i
+                      ><span>Voir le portfolio</span>
+                      <i class="fas fa-arrow-down icon-arrow"></i>
+                    </button>
+                  </a>
+                  <a href="./public/CV/CV_Bouhaben_David.pdf">
+                    <button
+                      class="btn btn__element btn__element--modifier icon-cart"
+                    >
+                      <i class="fas fa-file icon-cv"></i
+                      ><span>Télécharger CV</span>
+                      <i class="fas fa-download icon-download"></i>
+                    </button>
+                  </a>
+                </div> -->
 
                 <div class="tech tech--modifier">
                   <div class="container-overlay">
@@ -248,6 +268,17 @@
                       ><p>Web Design</p></span
                     >
                   </div>
+                </div>
+                <div
+                  class="container-down container-down__element container-down__element--modifier"
+                >
+                  <a
+                    href=""
+                    class="down down__element down__element--modifier"
+                    href="#about"
+                  >
+                    <i class="fas fa-angle-double-down fa-2x icon-bottom"></i>
+                  </a>
                 </div>
               </div>
             </div>
