animation up down works

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     class="down down__element down__element--modifier"
                     href="#about"
                   >
-                    <i class="fas fa-angle-double-down fa-2x icon-bottom"></i>
+                    <i class="fas fa-angle-double-down fa-2x"></i>
                   </a>
                 </div>
               </div>
