--- a/index.html
+++ b/index.html
@@ -79,12 +79,11 @@
       <div class="container-header__background">
         <div class="container-header__info">
           <div class="container-header__nav">
-            <!-- <span id="date" class="heure heure--modifier"></span> -->
+            <span id="date" class="heure heure--modifier"></span>
             <div
               id="currentTime"
               class="currentTime currentTime__element currentTime__element--modifier"
             ></div>
-
             <div id="home" class="top top__logo">
               <span class="top__logo--modifier">
                 <a href="/index.html"
@@ -201,7 +200,8 @@
                   Je suis à la recherche d'un contrat en alternance qui me
                   permettrait d’acquérir de nouvelles compétences dans le
                   développement web (côté Front-End, Back-end ou FullStack) à
-                  partir de Janvier 2022. <br/> Vous pouvez regarder ma
+                  partir de Janvier 2022. <br />
+                  Vous pouvez regarder ma
                   <a href="https://paper.li/e-1598349115"
                     >curation de contenu ici</a
                   >. Voulez-vous savoir plus sur moi ? Vous pouvez consulter
