button download and portofolio added to header

--- a/index.html
+++ b/index.html
@@ -192,6 +192,23 @@
                         ><i class="fab fa-twitter"></i
                       ></a>
                     </li>
+                    <li>
+                      <a href="#"
+                        ><i class="fas fa-briefcase icon-portfolio"></i
+                        ><span>Voir le portfolio</span>
+                        <i class="fas fa-arrow-down icon-arrow"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="./public/CV/CV_Bouhaben_David.pdf"
+                        title="Twitter"
+                      >
+                        <i class="fas fa-file icon-cv"></i
+                        ><span>Télécharger CV</span>
+                        <i class="fas fa-download icon-download"></i>
+                      </a>
+                    </li>
                   </ul>
                 </nav>
               </div>
