--- a/index.html
+++ b/index.html
@@ -59,18 +59,20 @@
               />Version Française</a
             >
           </li>
-          <span class="darkmode">
-            <span id="darkmode-Text"
-              ><i class="far fa-lightbulb claire"></i>Mode claire</span
-            >
-            <input
-              type="checkbox"
-              name="darkmode"
-              class="toggle"
-              id="darkmode"
-            />
-            <label for="darkmode" class="toggleBtn"></label>
-          </span>
+          <li class="li">
+            <span class="darkmode">
+              <span id="darkmode-Text"
+                ><i class="far fa-lightbulb claire"></i>Mode claire</span
+              >
+              <input
+                type="checkbox"
+                name="darkmode"
+                class="toggle"
+                id="darkmode"
+              />
+              <label for="darkmode" class="toggleBtn"></label>
+            </span>
+          </li>
         </ul>
       </nav>
     </div>
