--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="/public/css/style.css" />
     <link rel="stylesheet" href="/public/css/style.css.map" />
+    <!-- <script defer src="./Backend/app.js"></script> -->
     <title>David Bouhaben ePortfolio</title>
   </head>
   <body class="bodyLight" id="bodyId">
@@ -76,7 +77,7 @@
         </ul>
       </nav>
     </div>
-    <!-- Ici, Header -->
+    <!-- Ici, Header --> 
     <header id="site-header" class="wrapper container-header">
       <div class="container-header__background">
         <div class="container-header__info">
