click transition top 2px done

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </ul>
       </nav>
     </div>
-    <!-- Ici, Header --> 
+    <!-- Ici, Header -->
     <header id="site-header" class="wrapper container-header">
       <div class="container-header__background">
         <div class="container-header__info">
@@ -173,7 +173,7 @@
                   <h2>Développeur web/Front-End</h2>
                 </div>
               </div>
-              <div class="reseaux-sociaux">
+              <div class="btn-list">
                 <nav>
                   <ul>
                     <li>
@@ -235,26 +235,6 @@
                     >CV ici</a
                   >
                 </p>
-                <!-- <div class="container-portfolio">
-                  <a href="#">
-                    <button
-                      class="btn btn__element btn__element--modifier icon-info"
-                    >
-                      <i class="fas fa-briefcase icon-portfolio"></i
-                      ><span>Voir le portfolio</span>
-                      <i class="fas fa-arrow-down icon-arrow"></i>
-                    </button>
-                  </a>
-                  <a href="./public/CV/CV_Bouhaben_David.pdf">
-                    <button
-                      class="btn btn__element btn__element--modifier icon-cart"
-                    >
-                      <i class="fas fa-file icon-cv"></i
-                      ><span>Télécharger CV</span>
-                      <i class="fas fa-download icon-download"></i>
-                    </button>
-                  </a>
-                </div> -->
 
                 <div class="tech tech--modifier">
                   <div class="container-overlay">
