--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
                     alt="Logo David Bouhaben"
                 /></a>
               </span>
-
               <nav id="nav-desktop" class="nav-desktop">
                 <ul>
                   <li class="li">
@@ -234,7 +233,6 @@
                     >CV ici</a
                   >
                 </p>
-
                 <div class="tech tech--modifier">
                   <div class="container-overlay">
                     <i class="fas fa-laptop-code fa-2x"></i>
@@ -243,7 +241,6 @@
                       ><p>Front End</p>
                     </span>
                   </div>
-
                   <div class="container-overlay">
                     <i class="fas fa-server fa-2x"></i>
                     <span>Back End</span>
@@ -251,7 +248,6 @@
                       ><p>Back End</p></span
                     >
                   </div>
-
                   <div class="container-overlay">
                     <i class="fas fa-mobile-alt fa-2x"></i>
                     <span>Web Mobile</span>
@@ -259,7 +255,6 @@
                       ><p>Web Mobile</p></span
                     >
                   </div>
-
                   <div class="container-overlay">
                     <i class="fas fa-brush fa-2x"></i>
                     <span>Web Design</span>
@@ -286,87 +281,12 @@
       </div>
     </header>
 
-    <!-- "We are the <strong>music makers,</strong>
-         <br/>
-         and we are the <strong>dreamers of dreams."</strong> -->
-    <!-- </section> -->
-    <!-- <main class="container"> -->
-    <!-- <div class="proj-grid"> -->
-    <!-- <section class="proj-prev" onclick="location.href='/project.html'">
-         <div class="proj-prev__image">
-           <img
-             src="/public/img/photography_1280w.jpg"
-             srcset="
-               /public/img/photography_3000w.jpg 3000w,
-               /public/img/photography_1920w.jpg 1920w,
-               /public/img/photography_0864w.jpg  864w,
-               /public/img/photography_0640w.jpg  640w,
-               /public/img/photography_0640w.jpg  640w,
-               /public/img/photography_0420w.jpg  420w
-             "
-             alt="project title goes here"
-           />
-         </div>
-         <h1 class="proj-prev__heading">Project Title</h1>
-         <p class="proj-prev__byline">project keywords would go here</p>
-         </section>
-         <section class="proj-prev">
-         <div class="proj-prev__image">
-           <img
-             src="/public/img/photography_1280w.jpg"
-             srcset="
-               /public/img/photography_3000w.jpg 3000w,
-               /public/img/photography_1920w.jpg 1920w,
-               /public/img/photography_0864w.jpg  864w,
-               /public/img/photography_0640w.jpg  640w,
-               /public/img/photography_0640w.jpg  640w,
-               /public/img/photography_0420w.jpg  420w
-             "
-             alt="project title goes here"
-           />
-         </div>
-         <h1 class="proj-prev__heading">Project Title</h1>
-         <p class="proj-prev__byline">project keywords would go here</p>
-         </section>
-         <section class="proj-prev">
-         <div class="proj-prev__image">
-           <img
-             src="/public/img/photography_1280w.jpg"
-             srcset="
-               /public/img/photography_3000w.jpg 3000w,
-               /public/img/photography_1920w.jpg 1920w,
-               /public/img/photography_0864w.jpg  864w,
-               /public/img/photography_0640w.jpg  640w,
-               /public/img/photography_0640w.jpg  640w,
-               /public/img/photography_0420w.jpg  420w
-             "
-             alt="project title goes here"
-           />
-         </div>
-         <h1 class="proj-prev__heading">Project Title</h1>
-         <p class="proj-prev__byline">project keywords would go here</p>
-         </section>
-         <section class="proj-prev">
-         <div class="proj-prev__image">
-           <img
-             src="/public/img/photography_1280w.jpg"
-             srcset="
-               /public/img/photography_3000w.jpg 3000w,
-               /public/img/photography_1920w.jpg 1920w,
-               /public/img/photography_0864w.jpg  864w,
-               /public/img/photography_0640w.jpg  640w,
-               /public/img/photography_0640w.jpg  640w,
-               /public/img/photography_0420w.jpg  420w
-             "
-             alt="project title goes here"
-           />
-         </div>
-         <h1 class="proj-prev__heading">Project Title</h1>
-         <p class="proj-prev__byline">project keywords would go here</p>
-         </section> -->
-    <!-- </div> -->
-    <!-- </main> -->
-    <!-- </div> -->
+    <footer>
+      <div class="footer">
+        
+      </div>
+    </footer>
+
     <script defer src="./public/JS/loading.js"></script>
     <script defer src="./public/JS/hamburger.js"></script>
     <script defer src="./public/JS/nav.js"></script>
